--- a/network-map.ipynb
+++ b/network-map.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "1e4b53ac-202d-4719-a23b-db88852ce8b5",
    "metadata": {},
    "outputs": [
@@ -304,8 +304,8 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"1000px\"\n",
-       "            height=\"500px\"\n",
+       "            width=\"100%\"\n",
+       "            height=\"100%\"\n",
        "            src=\"nx.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -313,17 +313,17 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x17492df47c0>"
+       "<IPython.lib.display.IFrame at 0x17490211220>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# interactive graph\n",
-    "nt = Network('500px', '1000px', notebook=True)\n",
+    "nt = Network('100%', '100%', notebook=True)\n",
     "nt.from_nx(G)\n",
     "#nt.show_buttons(filter_=['physics'])  # uncomment this line to show the options\n",
     "nt.show('nx.html') # can also open the .html"
